--- a/操作KV数据redis/e_Hash.ipynb
+++ b/操作KV数据redis/e_Hash.ipynb
@@ -38,7 +38,8 @@
       "{'field1': 'Hello', 'field2': 'Hi', 'field3': 'World', 'field4': 'dc', 'field5': 'dmm'}\n",
       "5\n",
       "['field1', 'field2', 'field3', 'field4', 'field5']\n",
-      "['Hello', 'Hi', 'World', 'dc', 'dmm']\n"
+      "['Hello', 'Hi', 'World', 'dc', 'dmm']\n",
+      "['myhash']\n"
      ]
     }
    ],
@@ -61,7 +62,9 @@
     "# Return the list of keys within hash ``name``\n",
     "print(r.hkeys(\"myhash\"))\n",
     "# Return the list of values within hash ``name``\n",
-    "print(r.hvals(\"myhash\"))"
+    "print(r.hvals(\"myhash\"))\n",
+    "\n",
+    "print(r.keys())"
    ]
   },
   {
