--- a/操作KV数据redis/管道.ipynb
+++ b/操作KV数据redis/管道.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "0ca1243e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import redis\n",
+    "# import redis\n",
+    "import redis.asyncio as redis  \n",
     "\n",
     "r = redis.Redis(host='localhost', port=6379, password=None, decode_responses=True)"
    ]
@@ -20,15 +21,21 @@
    "outputs": [],
    "source": [
     "# Pipelines are a subclass of the base Redis class that provide support for buffering multiple commands to the server in a single request. They can be used to dramatically increase the performance of groups of commands by reducing the number of back-and-forth TCP packets between the client and server\n",
-    "with r.pipeline() as pipe:\n",
+    "# with r.pipeline() as pipe:\n",
+    "#     pipe.set(\"key1\", \"value1\")\n",
+    "#     pipe.set(\"key2\", \"value2\")\n",
+    "#     pipe.execute()\n",
+    "\n",
+    "# 异步管道\n",
+    "async with r.pipeline() as pipe:\n",
     "    pipe.set(\"key1\", \"value1\")\n",
     "    pipe.set(\"key2\", \"value2\")\n",
-    "    pipe.execute()"
+    "    await pipe.execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "af9533a6",
    "metadata": {},
    "outputs": [
@@ -36,27 +43,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['key2', 'key1']\n"
+      "['key1', 'key2']\n"
      ]
     }
    ],
    "source": [
-    "print(r.keys())"
+    "print(await r.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "93ef6adb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "<coroutine object Redis.execute_command at 0x00000293EEA60040>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,12 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "f840581f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coroutine object Redis.aclose at 0x00000293EEA604A0>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "r.close()"
+    "r.aclose()"
    ]
   }
  ],
