--- a/flask_frame_note/request_file_test.ipynb
+++ b/flask_frame_note/request_file_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bb9bd942",
    "metadata": {},
    "outputs": [
@@ -19,8 +19,8 @@
     "\n",
     "url = 'http://localhost:5000/upload'\n",
     "files = [\n",
-    "    ('file', open('data/test0.txt', 'rb')),\n",
-    "    ('file', open('data/test1.py', 'rb')),\n",
+    "    ('my_file', open('data/test0.txt', 'rb')),\n",
+    "    ('my_file', open('data/test1.py', 'rb')),\n",
     "]\n",
     "\n",
     "response = requests.post(url, files=files)\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0ca0c484",
    "metadata": {},
    "outputs": [
@@ -48,12 +48,12 @@
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100   709  100    10  100   699     46   3217 --:--:-- --:--:-- --:--:--  3267\n"
+      "100   715  100    10  100   705     46   3248 --:--:-- --:--:-- --:--:--  3294\n"
      ]
     }
    ],
    "source": [
-    "!curl -X POST -F \"file=@data/test0.txt\" -F \"file=@data/test1.py\" http://localhost:5000/upload"
+    "!curl -X POST -F \"my_file=@data/test0.txt\" -F \"my_file=@data/test1.py\" http://localhost:5000/upload"
    ]
   }
  ],
