东西是学不完的

--- a/操作KV数据redis/e_Hash.ipynb
+++ b/操作KV数据redis/e_Hash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "0a50b0f3",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "124830f4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "2ffa27ec",
    "metadata": {},
    "outputs": [
@@ -33,24 +33,28 @@
       "1\n",
       "2\n",
       "2\n",
+      "Hello\n",
       "Hi\n",
-      "World\n",
-      "{'field1': 'Hello', 'field2': 'Hi', 'field3': 'World', 'field4': 'dc', 'field5': 'dmm'}\n",
+      "<class 'str'>\n",
+      "11111\n",
+      "{'field1': 'Hello', 'field2': 'Hi', 'field3': '11111', 'field4': 'dc', 'field5': 'dmm'}\n",
       "5\n",
       "['field1', 'field2', 'field3', 'field4', 'field5']\n",
-      "['Hello', 'Hi', 'World', 'dc', 'dmm']\n",
-      "['myhash']\n"
+      "['Hello', 'Hi', '11111', 'dc', 'dmm']\n",
+      "['newbike', 'bike', 'myhash']\n"
      ]
     }
    ],
    "source": [
     "# Set ``key`` to ``value`` within hash ``name``,\n",
-    "print(r.hset(\"myhash\", key=\"field1\", value=\"Hello\"))\n",
-    "print(r.hset(\"myhash\", mapping={\"field2\": \"Hi\", \"field3\": \"World\"}))\n",
+    "print(r.hset(\"myhash\", key=\"field1\", value=\"Hello\"))  # 存储扁平结构\n",
+    "print(r.hset(\"myhash\", mapping={\"field2\": \"Hi\", \"field3\": 11111}))\n",
     "print(r.hset(\"myhash\", mapping={\"field4\": \"dc\", \"field5\": \"dmm\"}))\n",
     "\n",
     "# Return the value of ``key`` within the hash ``name``\n",
+    "print(r.hget(\"myhash\", \"field1\"))\n",
     "print(r.hget(\"myhash\", \"field2\"))\n",
+    "print(type(r.hget(\"myhash\", \"field2\")))  # str\n",
     "print(r.hget(\"myhash\", \"field3\"))\n",
     "\n",
     "# Return a Python dict of the hash's name/value pairs\n",
@@ -69,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "id": "835d8911",
    "metadata": {},
    "outputs": [
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "da3a2583",
    "metadata": {},
    "outputs": [
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "id": "12ffdb87",
    "metadata": {},
    "outputs": [
@@ -125,7 +129,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "c8044852",
    "metadata": {},
    "outputs": [],
