--- a/操作KV数据redis/search0_hash.ipynb
+++ b/操作KV数据redis/search0_hash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "2bedb72a",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "id": "911a1f22",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "id": "eeb4d86c",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16:43:20 redisvl.index.index INFO   Index already exists, overwriting.\n"
+      "17:22:49 redisvl.index.index INFO   Index already exists, overwriting.\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "id": "61149a7e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
     "data = [\n",
     "    {\n",
     "        'user': 'john',\n",
-    "        'user_embedding': np.array([0.1, 0.1, 0.5], dtype=np.float32).tobytes()\n",
+    "        'user_embedding': np.array([0.1, 0.1, 0.5], dtype=np.float32).tobytes()  # hash存储时,向量必须以字节字符串的形式存储\n",
     "    },\n",
     "    {\n",
     "        'user': 'mary',\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "d0a3921a",
    "metadata": {},
    "outputs": [
@@ -95,15 +95,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'user_simple_docs:01K38F3X77QB5R732E4Y6NQV8Z', 'vector_distance': '0', 'user': 'john'}\n",
-      "{b'user': b'john', b'user_embedding': b'\\xcd\\xcc\\xcc=\\xcd\\xcc\\xcc=\\x00\\x00\\x00?'}\n",
-      "[0.10000000149011612, 0.10000000149011612, 0.5]\n",
-      "{'id': 'user_simple_docs:01K38F4CNP0TA698R3NEEBDNY6', 'vector_distance': '0', 'user': 'john'}\n",
-      "{b'user': b'john', b'user_embedding': b'\\xcd\\xcc\\xcc=\\xcd\\xcc\\xcc=\\x00\\x00\\x00?'}\n",
-      "[0.10000000149011612, 0.10000000149011612, 0.5]\n",
-      "{'id': 'user_simple_docs:01K38F4P9EADF1W5ZQ60G0GMN1', 'vector_distance': '0', 'user': 'john'}\n",
-      "{b'user': b'john', b'user_embedding': b'\\xcd\\xcc\\xcc=\\xcd\\xcc\\xcc=\\x00\\x00\\x00?'}\n",
-      "[0.10000000149011612, 0.10000000149011612, 0.5]\n"
+      "{'id': 'user_simple_docs:01K38HCVEMTR5E8SHPQF9KBTSW', 'vector_distance': '0', 'user': 'john'}\n",
+      "向量的字节字符串形式:  b'\\xcd\\xcc\\xcc=\\xcd\\xcc\\xcc=\\x00\\x00\\x00?'\n",
+      "向量的数组像是:  [0.10000000149011612, 0.10000000149011612, 0.5]\n",
+      "{'id': 'user_simple_docs:01K38HCZSX46RDBHP1QS30EB7C', 'vector_distance': '0', 'user': 'john'}\n",
+      "向量的字节字符串形式:  b'\\xcd\\xcc\\xcc=\\xcd\\xcc\\xcc=\\x00\\x00\\x00?'\n",
+      "向量的数组像是:  [0.10000000149011612, 0.10000000149011612, 0.5]\n",
+      "{'id': 'user_simple_docs:01K38HCVEMTR5E8SHPQF9KBTSX', 'vector_distance': '0.0161802768707', 'user': 'mary'}\n",
+      "向量的字节字符串形式:  b'\\xcd\\xccL>\\xcd\\xcc\\xcc=\\x00\\x00\\x00?'\n",
+      "向量的数组像是:  [0.20000000298023224, 0.10000000149011612, 0.5]\n"
      ]
     }
    ],
@@ -121,14 +121,14 @@
     "    key_type = client.type(id_)\n",
     "    if key_type == b\"hash\":\n",
     "        hash_data = client.hgetall(id_)\n",
-    "        print(hash_data)\n",
+    "        print(\"向量的字节字符串形式: \", hash_data[b'user_embedding'])\n",
     "        embedding = buffer_to_array(hash_data[b'user_embedding'], dtype='float32')\n",
-    "        print(embedding)"
+    "        print(\"向量的数组像是: \", embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "id": "9b3f49e9",
    "metadata": {},
    "outputs": [],
