--- a/操作KV数据redis/search0_json.ipynb
+++ b/操作KV数据redis/search0_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "7b719c2b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "cc3a4609",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "6ccda03c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "b0aa76d8",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "efe8723a",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['user_simple_docs:01K38EMZQS24T4N2ZMTEFBFXMB', 'user_simple_docs:01K38EMZS5GRC86ERMD0J51PWS', 'user_simple_docs:01K38EMZTD13C74H1Z62J5BWX4']\n"
+      "['user_simple_docs:01K38GPBRNH5M8TGN2FTA2HCM7', 'user_simple_docs:01K38GPBSYB2515FTH4AC2EA78', 'user_simple_docs:01K38GPBV53QTEYHVYC85AKV8B']\n"
      ]
     }
    ],
@@ -85,13 +85,13 @@
     "        'user': 'john',\n",
     "        'age': 1,\n",
     "        'job': 'engineer',\n",
-    "        'user_embedding': np.array([0.1, 0.1, 0.5], dtype=np.float32)\n",
+    "        'user_embedding': np.array([0.1, 0.1, 0.5], dtype=np.float32)  # json存储时,向量必须以数组的形式存储\n",
     "    },\n",
     "    {\n",
     "        'user': 'mary',\n",
     "        'age': 2,\n",
     "        'job': 'doctor',\n",
-    "        'user_embedding': np.array([0.2, 0.1, 0.5], dtype=np.float32)\n",
+    "        'user_embedding': [0.2, 0.1, 0.5]\n",
     "    },\n",
     "    {\n",
     "        'user': 'joe',\n",
@@ -109,81 +109,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d6e80423",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'id': 'user_simple_docs:01K38EMZQS24T4N2ZMTEFBFXMB',\n",
-       "  'vector_distance': '0',\n",
-       "  'user': 'john',\n",
-       "  'age': '1',\n",
-       "  'job': 'engineer',\n",
-       "  'user_embedding': '[0.10000000149011612,0.10000000149011612,0.5]'},\n",
-       " {'id': 'user_simple_docs:01K38EMZS5GRC86ERMD0J51PWS',\n",
-       "  'vector_distance': '0.0161802768707',\n",
-       "  'user': 'mary',\n",
-       "  'age': '2',\n",
-       "  'job': 'doctor',\n",
-       "  'user_embedding': '[0.20000000298023224,0.10000000149011612,0.5]'},\n",
-       " {'id': 'user_simple_docs:01K38EMZTD13C74H1Z62J5BWX4',\n",
-       "  'vector_distance': '0.653301358223',\n",
-       "  'user': 'joe',\n",
-       "  'age': '3',\n",
-       "  'job': 'dentist',\n",
-       "  'user_embedding': '[0.8999999761581421,0.8999999761581421,0.10000000149011612]'}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'user_simple_docs:01K38GPBRNH5M8TGN2FTA2HCM7', 'vector_distance': '0', 'user': 'john', 'age': '1', 'job': 'engineer', 'user_embedding': '[0.10000000149011612,0.10000000149011612,0.5]'}\n",
+      "b'ReJSON-RL'\n",
+      "{'id': 'user_simple_docs:01K38GPBSYB2515FTH4AC2EA78', 'vector_distance': '0.0161802768707', 'user': 'mary', 'age': '2', 'job': 'doctor', 'user_embedding': '[0.2,0.1,0.5]'}\n",
+      "b'ReJSON-RL'\n",
+      "{'id': 'user_simple_docs:01K38GPBV53QTEYHVYC85AKV8B', 'vector_distance': '0.653301358223', 'user': 'joe', 'age': '3', 'job': 'dentist', 'user_embedding': '[0.8999999761581421,0.8999999761581421,0.10000000149011612]'}\n",
+      "b'ReJSON-RL'\n"
+     ]
     }
    ],
    "source": [
+    "# A query for running a vector search along with an optional filter expression.\n",
     "query_vector = VectorQuery(\n",
     "    vector=[0.1, 0.1, 0.5],\n",
     "    vector_field_name=\"user_embedding\",\n",
     "    return_fields=[\"user\", \"age\", \"job\", \"vector_distance\", 'user_embedding'],\n",
-    "    num_results=3\n",
+    "    num_results=3,\n",
+    "    filter_expression=None\n",
     ")\n",
     "results_vector = index.query(query_vector)\n",
-    "results_vector"
+    "for i in results_vector:\n",
+    "    print(i)\n",
+    "    print(client.type(i['id']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "30642a0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'user_simple_docs:01K38EMZQS24T4N2ZMTEFBFXMB',\n",
+       "[{'id': 'user_simple_docs:01K38GPBRNH5M8TGN2FTA2HCM7',\n",
        "  'user': 'john',\n",
        "  'age': '1',\n",
        "  'job': 'engineer',\n",
        "  'user_embedding': '[0.10000000149011612,0.10000000149011612,0.5]'},\n",
-       " {'id': 'user_simple_docs:01K38EMZS5GRC86ERMD0J51PWS',\n",
+       " {'id': 'user_simple_docs:01K38GPBSYB2515FTH4AC2EA78',\n",
        "  'user': 'mary',\n",
        "  'age': '2',\n",
        "  'job': 'doctor',\n",
-       "  'user_embedding': '[0.20000000298023224,0.10000000149011612,0.5]'},\n",
-       " {'id': 'user_simple_docs:01K38EMZTD13C74H1Z62J5BWX4',\n",
+       "  'user_embedding': '[0.2,0.1,0.5]'},\n",
+       " {'id': 'user_simple_docs:01K38GPBV53QTEYHVYC85AKV8B',\n",
        "  'user': 'joe',\n",
        "  'age': '3',\n",
        "  'job': 'dentist',\n",
        "  'user_embedding': '[0.8999999761581421,0.8999999761581421,0.10000000149011612]'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# A query for running a filtered search with a filter expression.\n",
     "query_filter = FilterQuery(\n",
     "    filter_expression=\"*\", \n",
     "    return_fields=[\"user\", \"age\", \"job\", 'user_embedding']\n",
@@ -195,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "80289139",
    "metadata": {},
    "outputs": [
@@ -205,7 +195,7 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "bdc257f5",
    "metadata": {},
    "outputs": [
@@ -227,7 +217,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "7b95e0f6",
    "metadata": {},
    "outputs": [],
@@ -250,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "858ca668",
    "metadata": {},
    "outputs": [
@@ -260,7 +250,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
