--- a/操作KV数据redis/search0_json.ipynb
+++ b/操作KV数据redis/search0_json.ipynb
@@ -131,7 +131,7 @@
     "query_vector = VectorQuery(\n",
     "    vector=[0.1, 0.1, 0.5],\n",
     "    vector_field_name=\"user_embedding\",\n",
-    "    return_fields=[\"user\", \"age\", \"job\", \"vector_distance\", 'user_embedding'],\n",
+    "    return_fields=[\"user\", \"age\", \"job\", \"vector_distance\", 'user_embedding'],  # 默认返回所有字段\n",
     "    num_results=3,\n",
     "    filter_expression=None\n",
     ")\n",
