添加过滤表达式的简单学习

--- a/操作KV数据redis/search0_json.ipynb
+++ b/操作KV数据redis/search0_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 196,
    "id": "7b719c2b",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "from redisvl.index import SearchIndex\n",
     "from redis import Redis\n",
-    "from redisvl.query import VectorQuery, FilterQuery"
+    "from redisvl.query import VectorQuery, FilterQuery\n",
+    "from redisvl.query.filter import Text, Num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 197,
    "id": "cc3a4609",
    "metadata": {},
    "outputs": [],
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 198,
    "id": "6ccda03c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 199,
    "id": "b0aa76d8",
    "metadata": {},
    "outputs": [],
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 200,
    "id": "efe8723a",
    "metadata": {},
    "outputs": [
@@ -75,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['user_simple_docs:01K38GPBRNH5M8TGN2FTA2HCM7', 'user_simple_docs:01K38GPBSYB2515FTH4AC2EA78', 'user_simple_docs:01K38GPBV53QTEYHVYC85AKV8B']\n"
+      "['user_simple_docs:01K38RNP0GT22ZZF7TPA8ZGYX6', 'user_simple_docs:01K38RNP1PHTR3BDDNTV9WZVA4', 'user_simple_docs:01K38RNP2XW85SMCVW4V1HBGA7', 'user_simple_docs:01K38RNP42JCCXZ2E69GNXJMWX', 'user_simple_docs:01K38RNP59KMPRDY0C7F8VG20V']\n"
      ]
     }
    ],
@@ -98,18 +99,30 @@
     "        'age': 3,\n",
     "        'job': 'dentist',\n",
     "        'user_embedding': np.array([0.9, 0.9, 0.1], dtype=np.float32)\n",
+    "    },\n",
+    "    {\n",
+    "        'user': 'tom',\n",
+    "        'age': 4,\n",
+    "        'job': 'dentist',\n",
+    "        'user_embedding': np.array([0.9, 0.9, 0.3], dtype=np.float32)\n",
+    "    },\n",
+    "    {\n",
+    "        'user': 'jack',\n",
+    "        'age': 5,\n",
+    "        'job': 'dentist',\n",
+    "        'user_embedding': np.array([0.9, 0.9, 0.3], dtype=np.float32)\n",
     "    }\n",
     "]\n",
     "\n",
     "keys = index.load(data)\n",
     "\n",
-    "# By default, load will create a unique Redis key as a combination of the index key prefix and a random ULID. \n",
+    "# By default, load will create a unique Redis key as a combination of the index key prefix and a random ULID.\n",
     "print(keys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "d6e80423",
    "metadata": {},
    "outputs": [
@@ -117,11 +130,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'user_simple_docs:01K38GPBRNH5M8TGN2FTA2HCM7', 'vector_distance': '0', 'user': 'john', 'age': '1', 'job': 'engineer', 'user_embedding': '[0.10000000149011612,0.10000000149011612,0.5]'}\n",
+      "{'id': 'user_simple_docs:01K38RNP0GT22ZZF7TPA8ZGYX6', 'vector_distance': '0', 'user': 'john', 'age': '1', 'job': 'engineer', 'user_embedding': '[0.10000000149011612,0.10000000149011612,0.5]'}\n",
       "b'ReJSON-RL'\n",
-      "{'id': 'user_simple_docs:01K38GPBSYB2515FTH4AC2EA78', 'vector_distance': '0.0161802768707', 'user': 'mary', 'age': '2', 'job': 'doctor', 'user_embedding': '[0.2,0.1,0.5]'}\n",
+      "{'id': 'user_simple_docs:01K38RNP1PHTR3BDDNTV9WZVA4', 'vector_distance': '0.0161802768707', 'user': 'mary', 'age': '2', 'job': 'doctor', 'user_embedding': '[0.2,0.1,0.5]'}\n",
       "b'ReJSON-RL'\n",
-      "{'id': 'user_simple_docs:01K38GPBV53QTEYHVYC85AKV8B', 'vector_distance': '0.653301358223', 'user': 'joe', 'age': '3', 'job': 'dentist', 'user_embedding': '[0.8999999761581421,0.8999999761581421,0.10000000149011612]'}\n",
+      "{'id': 'user_simple_docs:01K38RNP42JCCXZ2E69GNXJMWX', 'vector_distance': '0.514338135719', 'user': 'tom', 'age': '4', 'job': 'dentist', 'user_embedding': '[0.8999999761581421,0.8999999761581421,0.30000001192092896]'}\n",
       "b'ReJSON-RL'\n"
      ]
     }
@@ -143,31 +156,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "30642a0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'user_simple_docs:01K38GPBRNH5M8TGN2FTA2HCM7',\n",
+       "[{'id': 'user_simple_docs:01K38RNP0GT22ZZF7TPA8ZGYX6',\n",
        "  'user': 'john',\n",
        "  'age': '1',\n",
        "  'job': 'engineer',\n",
        "  'user_embedding': '[0.10000000149011612,0.10000000149011612,0.5]'},\n",
-       " {'id': 'user_simple_docs:01K38GPBSYB2515FTH4AC2EA78',\n",
+       " {'id': 'user_simple_docs:01K38RNP1PHTR3BDDNTV9WZVA4',\n",
        "  'user': 'mary',\n",
        "  'age': '2',\n",
        "  'job': 'doctor',\n",
        "  'user_embedding': '[0.2,0.1,0.5]'},\n",
-       " {'id': 'user_simple_docs:01K38GPBV53QTEYHVYC85AKV8B',\n",
+       " {'id': 'user_simple_docs:01K38RNP2XW85SMCVW4V1HBGA7',\n",
        "  'user': 'joe',\n",
        "  'age': '3',\n",
        "  'job': 'dentist',\n",
-       "  'user_embedding': '[0.8999999761581421,0.8999999761581421,0.10000000149011612]'}]"
+       "  'user_embedding': '[0.8999999761581421,0.8999999761581421,0.10000000149011612]'},\n",
+       " {'id': 'user_simple_docs:01K38RNP42JCCXZ2E69GNXJMWX',\n",
+       "  'user': 'tom',\n",
+       "  'age': '4',\n",
+       "  'job': 'dentist',\n",
+       "  'user_embedding': '[0.8999999761581421,0.8999999761581421,0.30000001192092896]'},\n",
+       " {'id': 'user_simple_docs:01K38RNP59KMPRDY0C7F8VG20V',\n",
+       "  'user': 'jack',\n",
+       "  'age': '5',\n",
+       "  'job': 'dentist',\n",
+       "  'user_embedding': '[0.8999999761581421,0.8999999761581421,0.30000001192092896]'}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,17 +208,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 203,
+   "id": "7e8ccd95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'user_simple_docs:01K38RNP59KMPRDY0C7F8VG20V',\n",
+       "  'user': 'jack',\n",
+       "  'job': 'dentist',\n",
+       "  'age': 5,\n",
+       "  'user_embedding': [0.8999999761581421,\n",
+       "   0.8999999761581421,\n",
+       "   0.30000001192092896]},\n",
+       " {'id': 'user_simple_docs:01K38RNP0GT22ZZF7TPA8ZGYX6',\n",
+       "  'user': 'john',\n",
+       "  'job': 'engineer',\n",
+       "  'age': 1,\n",
+       "  'user_embedding': [0.10000000149011612, 0.10000000149011612, 0.5]}]"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index.query(FilterQuery(\n",
+    "    filter_expression=(Text(\"job\") == \"dentist\") & (Num(\"age\") >= 5) | (Num(\"age\") < 2)\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
    "id": "80289139",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 205,
    "id": "bdc257f5",
    "metadata": {},
    "outputs": [
@@ -217,7 +274,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 206,
    "id": "7b95e0f6",
    "metadata": {},
    "outputs": [],
@@ -240,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 207,
    "id": "858ca668",
    "metadata": {},
    "outputs": [
@@ -250,7 +307,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
