sqllite基本学习完毕

--- a/操作SQLite数据库/base0.ipynb
+++ b/操作SQLite数据库/base0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "a2d5af35",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# 如果文件不存在则隐式创建\n",
-    "conn = sqlite3.connect(\"db_data/base.db\")\n",
+    "conn = sqlite3.connect(\"db_data/base0.db\")\n",
     "cursor = conn.cursor()\n",
     "\n",
     "\n",
@@ -45,12 +45,12 @@
     "cursor.executemany(\n",
     "    \"INSERT INTO users (name, age, email) VALUES (?, ?, ?)\", users\n",
     ")\n",
-    "conn.commit()"
+    "conn.commit()  # 提交事务(增删改后需要提交)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "8b5f6e90",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "bcf72327",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "475b0671",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "3da8d9f5",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "5a213af9",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "105c2c3a",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
+   "id": "eb915c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 1, 'name': 'Alice', 'age': 26, 'email': 'alice@example.com'}\n",
+      "{'id': 3, 'name': 'Charlie', 'age': 28, 'email': 'charlie@example.com'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn.row_factory = sqlite3.Row  # 获得字典格式的结果\n",
+    "cursor = conn.cursor()\n",
+    "cursor.execute(\"SELECT * FROM users\")\n",
+    "for row in cursor.fetchall():\n",
+    "    print(dict(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "b45fcecf",
    "metadata": {},
    "outputs": [],
@@ -176,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "5957c688",
    "metadata": {},
    "outputs": [],
