--- a/setuptools_note/setuptools_base/atest/t0.ipynb
+++ b/setuptools_note/setuptools_base/atest/t0.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.227924400Z",
      "start_time": "2023-12-11T03:10:19.350643900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -16,131 +16,172 @@
      "output_type": "stream",
      "text": [
       "Package                   Version\n",
-      "------------------------- ------------\n",
-      "anyio                     3.5.0\n",
+      "------------------------- --------------\n",
+      "aiomysql                  0.2.0\n",
+      "altair                    5.4.1\n",
+      "annotated-types           0.7.0\n",
+      "anyio                     4.2.0\n",
       "argon2-cffi               21.3.0\n",
       "argon2-cffi-bindings      21.2.0\n",
-      "arrow                     1.2.3\n",
+      "arrow                     1.3.0\n",
       "asttokens                 2.0.5\n",
-      "async-lru                 2.0.3\n",
-      "attrs                     22.1.0\n",
-      "Babel                     2.12.1\n",
-      "backcall                  0.2.0\n",
-      "beautifulsoup4            4.12.2\n",
+      "async-lru                 2.0.4\n",
+      "async-timeout             5.0.1\n",
+      "attrs                     23.1.0\n",
+      "babel                     2.16.0\n",
+      "beautifulsoup4            4.12.3\n",
       "bleach                    4.1.0\n",
-      "blinker                   1.6.2\n",
-      "build                     1.0.3\n",
-      "certifi                   2023.7.22\n",
-      "cffi                      1.15.1\n",
-      "charset-normalizer        3.2.0\n",
-      "click                     8.1.6\n",
+      "blinker                   1.8.2\n",
+      "build                     1.2.2\n",
+      "cachetools                5.5.0\n",
+      "certifi                   2024.8.30\n",
+      "cffi                      1.16.0\n",
+      "charset-normalizer        3.3.2\n",
+      "click                     8.1.7\n",
       "colorama                  0.4.6\n",
-      "comm                      0.1.2\n",
-      "debugpy                   1.5.1\n",
+      "comm                      0.2.1\n",
+      "debugpy                   1.6.7\n",
       "decorator                 5.1.1\n",
       "defusedxml                0.7.1\n",
       "elasticsearch             7.11.0\n",
       "entrypoints               0.4\n",
-      "exceptiongroup            1.1.2\n",
+      "exceptiongroup            1.2.0\n",
       "executing                 0.8.3\n",
+      "fastapi                   0.112.2\n",
       "fastjsonschema            2.16.2\n",
-      "Flask                     2.3.2\n",
+      "Flask                     3.0.3\n",
       "fqdn                      1.5.1\n",
-      "idna                      3.4\n",
-      "ipykernel                 6.19.2\n",
-      "ipython                   8.12.0\n",
+      "gitdb                     4.0.11\n",
+      "GitPython                 3.1.43\n",
+      "grpcio                    1.66.1\n",
+      "grpcio-tools              1.66.1\n",
+      "gunicorn                  23.0.0\n",
+      "h11                       0.14.0\n",
+      "h2                        4.1.0\n",
+      "hpack                     4.0.0\n",
+      "httpcore                  1.0.5\n",
+      "httpx                     0.27.2\n",
+      "hyperframe                6.0.1\n",
+      "idna                      3.7\n",
+      "ipykernel                 6.28.0\n",
+      "ipython                   8.25.0\n",
       "ipython-genutils          0.2.0\n",
-      "ipywidgets                8.0.7\n",
+      "ipywidgets                8.1.5\n",
       "isoduration               20.11.0\n",
-      "itsdangerous              2.1.2\n",
-      "jedi                      0.18.1\n",
-      "Jinja2                    3.1.2\n",
-      "joblib                    1.3.2\n",
-      "json5                     0.9.14\n",
-      "jsonlines                 3.1.0\n",
-      "jsonpointer               2.4\n",
-      "jsonschema                4.17.3\n",
-      "jsonschema-specifications 2023.7.1\n",
-      "jupyter                   1.0.0\n",
-      "jupyter_client            8.1.0\n",
+      "itsdangerous              2.2.0\n",
+      "jedi                      0.19.1\n",
+      "Jinja2                    3.1.4\n",
+      "joblib                    1.5.2\n",
+      "json5                     0.9.25\n",
+      "jsonpath-ng               1.7.0\n",
+      "jsonpointer               3.0.0\n",
+      "jsonschema                4.19.2\n",
+      "jsonschema-specifications 2023.12.1\n",
+      "jupyter                   1.1.1\n",
+      "jupyter_client            7.4.9\n",
       "jupyter-console           6.6.3\n",
-      "jupyter_core              5.3.0\n",
-      "jupyter-events            0.6.3\n",
-      "jupyter-lsp               2.2.0\n",
-      "jupyter_server            2.5.0\n",
+      "jupyter_core              5.7.2\n",
+      "jupyter-events            0.10.0\n",
+      "jupyter-lsp               2.2.5\n",
+      "jupyter_server            2.14.1\n",
       "jupyter_server_terminals  0.4.4\n",
-      "jupyterlab                4.0.3\n",
-      "jupyterlab-pygments       0.1.2\n",
-      "jupyterlab_server         2.24.0\n",
-      "jupyterlab-widgets        3.0.8\n",
-      "lxml                      4.9.2\n",
-      "MarkupSafe                2.1.1\n",
+      "jupyterlab                4.2.5\n",
+      "jupyterlab-pygments       0.2.2\n",
+      "jupyterlab_server         2.27.3\n",
+      "jupyterlab_widgets        3.0.13\n",
+      "markdown-it-py            3.0.0\n",
+      "MarkupSafe                2.1.3\n",
       "matplotlib-inline         0.1.6\n",
-      "mistune                   0.8.4\n",
+      "mdurl                     0.1.2\n",
+      "mistune                   2.0.4\n",
+      "ml_dtypes                 0.5.3\n",
+      "mysql-connector-python    9.3.0\n",
+      "narwhals                  1.8.1\n",
       "nb-conda-kernels          2.3.1\n",
-      "nbclassic                 0.5.5\n",
-      "nbclient                  0.5.13\n",
-      "nbconvert                 6.5.4\n",
-      "nbformat                  5.7.0\n",
-      "neo4j                     5.13.0\n",
-      "nest-asyncio              1.5.6\n",
-      "notebook                  6.5.4\n",
-      "notebook_shim             0.2.2\n",
-      "numpy                     1.26.2\n",
-      "overrides                 7.3.1\n",
-      "packaging                 23.0\n",
+      "nbclassic                 1.1.0\n",
+      "nbclient                  0.10.0\n",
+      "nbconvert                 7.10.0\n",
+      "nbformat                  5.10.4\n",
+      "neo4j                     5.24.0\n",
+      "nest-asyncio              1.6.0\n",
+      "notebook                  6.5.7\n",
+      "notebook_shim             0.2.3\n",
+      "numpy                     1.26.4\n",
+      "overrides                 7.4.0\n",
+      "packaging                 24.1\n",
+      "pandas                    2.2.2\n",
       "pandocfilters             1.5.0\n",
       "parso                     0.8.3\n",
-      "pickleshare               0.7.5\n",
-      "pip                       23.1.2\n",
-      "platformdirs              2.5.2\n",
+      "pillow                    10.4.0\n",
+      "pip                       24.2\n",
+      "platformdirs              3.10.0\n",
+      "ply                       3.11\n",
+      "portalocker               2.10.1\n",
       "prometheus-client         0.14.1\n",
-      "prompt-toolkit            3.0.36\n",
+      "prompt-toolkit            3.0.43\n",
+      "protobuf                  5.28.2\n",
       "psutil                    5.9.0\n",
       "pure-eval                 0.2.2\n",
+      "pyarrow                   17.0.0\n",
       "pycparser                 2.21\n",
+      "pydantic                  2.8.2\n",
+      "pydantic_core             2.20.1\n",
+      "pydeck                    0.9.1\n",
       "Pygments                  2.15.1\n",
-      "pyproject_hooks           1.0.0\n",
-      "pyrsistent                0.18.0\n",
-      "python-dateutil           2.8.2\n",
+      "PyMySQL                   1.1.1\n",
+      "pyproject_hooks           1.1.0\n",
+      "python-dateutil           2.9.0.post0\n",
       "python-json-logger        2.0.7\n",
-      "pytz                      2023.3.post1\n",
+      "python-multipart          0.0.20\n",
+      "python-ulid               3.1.0\n",
+      "pytz                      2024.2\n",
       "pywin32                   305.1\n",
       "pywinpty                  2.0.10\n",
       "PyYAML                    6.0.1\n",
-      "pyzmq                     25.1.0\n",
-      "qtconsole                 5.4.3\n",
-      "QtPy                      2.3.1\n",
-      "referencing               0.30.0\n",
-      "requests                  2.31.0\n",
+      "pyzmq                     24.0.1\n",
+      "qdrant-client             1.11.2\n",
+      "redis                     6.2.0\n",
+      "redisvl                   0.8.1\n",
+      "referencing               0.35.1\n",
+      "requests                  2.32.3\n",
       "rfc3339-validator         0.1.4\n",
       "rfc3986-validator         0.1.1\n",
-      "rpds-py                   0.9.2\n",
-      "scikit-learn              1.3.2\n",
-      "scipy                     1.11.4\n",
-      "Send2Trash                1.8.0\n",
-      "setuptools                69.0.2\n",
+      "rich                      13.8.1\n",
+      "rpds-py                   0.10.6\n",
+      "scikit-learn              1.7.2\n",
+      "scipy                     1.15.3\n",
+      "Send2Trash                1.8.2\n",
+      "setuptools                75.1.0\n",
       "six                       1.16.0\n",
-      "sniffio                   1.2.0\n",
-      "soupsieve                 2.4.1\n",
+      "smmap                     5.0.1\n",
+      "sniffio                   1.3.0\n",
+      "soupsieve                 2.5\n",
       "stack-data                0.2.0\n",
+      "starlette                 0.38.4\n",
+      "streamlit                 1.38.0\n",
+      "tenacity                  8.5.0\n",
       "terminado                 0.17.1\n",
-      "threadpoolctl             3.2.0\n",
+      "threadpoolctl             3.6.0\n",
       "tinycss2                  1.2.1\n",
+      "toml                      0.10.2\n",
       "tomli                     2.0.1\n",
-      "tornado                   6.2\n",
-      "tqdm                      4.66.1\n",
-      "traitlets                 5.7.1\n",
-      "typing_extensions         4.6.3\n",
+      "tornado                   6.4.1\n",
+      "tqdm                      4.67.1\n",
+      "traitlets                 5.14.3\n",
+      "types-python-dateutil     2.9.0.20240821\n",
+      "typing_extensions         4.11.0\n",
+      "tzdata                    2024.1\n",
       "uri-template              1.3.0\n",
-      "urllib3                   1.26.16\n",
-      "wcwidth                   0.2.5\n",
-      "webcolors                 1.13\n",
+      "urllib3                   1.26.20\n",
+      "uvicorn                   0.34.0\n",
+      "watchdog                  4.0.2\n",
+      "wcwidth                   0.2.13\n",
+      "webcolors                 24.8.0\n",
       "webencodings              0.5.1\n",
-      "websocket-client          0.58.0\n",
-      "Werkzeug                  2.3.6\n",
-      "wheel                     0.38.4\n",
-      "widgetsnbextension        4.0.8\n",
+      "websocket-client          1.8.0\n",
+      "Werkzeug                  3.0.4\n",
+      "wheel                     0.43.0\n",
+      "widgetsnbextension        4.0.13\n",
       "xyzqwer                   0.0.1\n"
      ]
     }
@@ -151,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.259325300Z",
@@ -177,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.259325300Z",
@@ -189,16 +230,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "鱼的位置是 8 8\n",
-      "🐟移动后的位置是 7 8\n",
-      "金鱼的位置是 9 6\n",
-      "🐟移动后的位置是 8 6\n",
+      "鱼的位置是 1 10\n",
+      "🐟移动后的位置是 0 10\n",
+      "金鱼的位置是 5 7\n",
+      "🐟移动后的位置是 4 7\n",
       "鲨鱼0,hangry? True\n",
-      "鲨鱼0: 9 1\n",
+      "鲨鱼0: 0 0\n",
       "鲨鱼1,hangry? True\n",
-      "鲨鱼1: 7 3\n",
+      "鲨鱼1: 3 5\n",
       "鲨鱼2,hangry? True\n",
-      "鲨鱼2: 7 4\n"
+      "鲨鱼2: 4 7\n"
      ]
     }
    ],
@@ -233,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.330843800Z",
@@ -243,9 +284,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "3"
+      "text/plain": [
+       "3"
+      ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.331887700Z",
@@ -271,10 +314,10 @@
      "evalue": "No module named 'mypackage.my1'",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[16], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmypackage\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmy1\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcustom_ao\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m c_multi  \u001B[38;5;66;03m# mypackage目录下的my1包未安装\u001B[39;00m\n\u001B[0;32m      3\u001B[0m c_multi(\u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m3\u001B[39m)\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'mypackage.my1'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmypackage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmy1\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcustom_ao\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m c_multi  \u001b[38;5;66;03m# mypackage目录下的my1包未安装\u001b[39;00m\n\u001b[0;32m      3\u001b[0m c_multi(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mypackage.my1'"
      ]
     }
    ],
@@ -286,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:33.484354400Z",
@@ -313,19 +356,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "start_time": "2023-12-11T03:10:20.291414700Z"
-    }
-   }
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "development",
    "language": "python",
    "name": "python3"
   },
@@ -341,12 +384,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "f0f00f8362c5a3720da2ab726d268bea0510b30405e73c37028dca2c1c343753"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
