--- a/setuptools_note/setuptools_base/atest/t0.ipynb
+++ b/setuptools_note/setuptools_base/atest/t0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.227924400Z",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.259325300Z",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.259325300Z",
@@ -230,16 +230,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "鱼的位置是 1 10\n",
-      "🐟移动后的位置是 0 10\n",
-      "金鱼的位置是 5 7\n",
-      "🐟移动后的位置是 4 7\n",
+      "鱼的位置是 9 7\n",
+      "🐟移动后的位置是 8 7\n",
+      "金鱼的位置是 2 4\n",
+      "🐟移动后的位置是 1 4\n",
       "鲨鱼0,hangry? True\n",
-      "鲨鱼0: 0 0\n",
+      "鲨鱼0: 1 9\n",
       "鲨鱼1,hangry? True\n",
-      "鲨鱼1: 3 5\n",
+      "鲨鱼1: 5 2\n",
       "鲨鱼2,hangry? True\n",
-      "鲨鱼2: 4 7\n"
+      "鲨鱼2: 2 6\n"
      ]
     }
    ],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.330843800Z",
@@ -288,7 +288,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:20.331887700Z",
@@ -316,7 +316,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmypackage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmy1\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcustom_ao\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m c_multi  \u001b[38;5;66;03m# mypackage目录下的my1包未安装\u001b[39;00m\n\u001b[0;32m      3\u001b[0m c_multi(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmypackage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmy1\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcustom_ao\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m c_multi  \u001b[38;5;66;03m# mypackage目录下的my1包未安装\u001b[39;00m\n\u001b[0;32m      3\u001b[0m c_multi(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mypackage.my1'"
      ]
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-11T03:10:33.484354400Z",
@@ -355,15 +355,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-12-11T03:10:20.291414700Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\duanm\\anaconda3\\envs\\development\\lib\\site-packages\\mypackage\\mp0\\data\\mypackage_my1_0.sql\n",
+      "select * from r0;\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib.resources import files\n",
+    "\n",
+    "\n",
+    "sql_file = files('mypackage.mp0').joinpath('data', 'mypackage_my1_0.sql')\n",
+    "print(sql_file)\n",
+    "with sql_file.open('r', encoding='utf-8') as f:\n",
+    "    sql_content = f.read()\n",
+    "    print(sql_content)"
+   ]
   }
  ],
  "metadata": {
