--- a/操作SQLite数据库/base3_json.ipynb
+++ b/操作SQLite数据库/base3_json.ipynb
@@ -24,7 +24,7 @@
     "    CREATE TABLE IF NOT EXISTS users (\n",
     "        id INTEGER PRIMARY KEY,\n",
     "        name TEXT,\n",
-    "        data TEXT\n",
+    "        data JSON\n",
     "    )\n",
     "''')  # 存储JSON数据(本质上仍然是TEXT)\n",
     "    user_data = {'age': 28, 'city': '北京', 'hobbies': ['读书', '旅游']}\n",
